--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guppy-pre-commit",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Installs a pre-commit git-hook only, for guppy packages",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,6 @@
   },
   "homepage": "https://github.com/therealklanni/guppy-pre-commit",
   "dependencies": {
-    "guppy-cli": "github:aindre/guppy-cli#1.0.0"
+    "guppy-cli": "github:hijup/guppy-cli#1.0.0"
   }
 }
